tests/cases/pass/if_else.cs
class Program {
    static void Main() {
        int x = 4;
        if (x > 2) Console.WriteLine(111);
        else Console.WriteLine(999);
        if (x < 2) Console.WriteLine(999);
        else Console.WriteLine(222);
    }
}
