tests/cases/fail/type_mismatch_init.cs
class Program { static void Main() { int x = "abc"; } }
